--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ API_PORT=4000
 JWT_SECRET_KEY=secret
 
 PGHOST=localhost
-PGUSER=matweqer
-PGDATABASE=postgres
-PGPASSWORD=vhbflhbfd9D
-PGPORT=8081
+PGUSER=postgres
+PGDATABASE=budget
+PGPASSWORD=Dilda123
+PGPORT=5432
 POSTGRES_PASSWORD=secret
