--- a/package.json
+++ b/package.json
@@ -3,16 +3,39 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "migration:create": "sequelize migration:create --name ",
+    "migrate:run": "sequelize db:migrate",
+    "migrate:undo": "sequelize db:migrate:undo"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-errors": "^2.0.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1",
+    "uuid": "^8.3.2",
+    "@babel/register": "^7.16.9",
+    "@babel/runtime": "^7.16.7"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-plugin-inline-dotenv": "^1.6.0"
   }
 }
