--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/register": "^7.16.9",
+    "@babel/runtime": "^7.16.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -23,11 +25,9 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.20.1",
     "uuid": "^8.3.2",
-    "@babel/register": "^7.16.9",
-    "@babel/runtime": "^7.16.7"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1",
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/eslint-parser": "^7.15.0",
@@ -36,6 +36,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "babel-plugin-inline-dotenv": "^1.6.0"
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "sequelize-cli": "^6.4.1"
   }
 }
